# programming_w_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: retail_sample.csv
docs/: index.html  workshop.html
docs/handouts/: copilot-cheatsheet.html  fallback-configs.html  principles.html
docs/phases/: phase0.html  phase1.html  phase2.html  phase3.html  phase4.html  phase5.html  phase6.html
pages/: index.html  workshop.html
pages/handouts/: copilot-cheatsheet.html
